// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsultationPlanRecursiveItems /> renders correcty close plan 1`] = `
<div
  className="consultation-plan_close"
>
  <Button
    active={false}
    aria-label="open-the-plan"
    block={false}
    bsClass="btn"
    bsStyle="link"
    className="p-0 btn-md"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="cap cap-android-menu mr-5 hidden-xs hidden-sm"
    />
    <FormattedMessage
      id="plan"
      values={Object {}}
    />
    <i
      className="cap cap-android-menu ml-5 hidden-md hidden-lg"
    />
  </Button>
</div>
`;

exports[`<ConsultationPlanRecursiveItems /> renders correcty open plan 1`] = `
<StackedNav>
  <div
    className="stacked-nav__header"
  >
    <p>
      <i
        className="cap cap-android-menu mr-5"
      />
      <FormattedMessage
        id="plan"
        values={Object {}}
      />
    </p>
    <Button
      active={false}
      aria-label="close-the-plan"
      block={false}
      bsClass="btn"
      bsStyle="link"
      className="p-0 btn-md"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="cap cap-delete-1"
      />
    </Button>
  </div>
  <div
    className="stacked-nav__list"
  >
    <ConsultationPlanItems
      key="0"
      level={0}
      section={
        Object {
          "$fragmentRefs": null,
          "sections": Array [],
        }
      }
      sectionKey={0}
    />
    <ConsultationPlanItems
      key="1"
      level={0}
      section={
        Object {
          "$fragmentRefs": null,
          "sections": Array [],
        }
      }
      sectionKey={1}
    />
  </div>
  <div
    className="stacked-nav__footer"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      className="p-0"
      disabled={false}
      onClick={[Function]}
    >
      <i
        className="cap cap-arrow-68 mr-5"
      />
      <FormattedMessage
        id="back-to-top"
        values={Object {}}
      />
    </Button>
  </div>
</StackedNav>
`;
